--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.acme</groupId>
   <artifactId>app</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
  
   <name>app</name>
   <description>Sample application</description>
-  <url>https://github.com/aalmiray/app</url>
+  <url>https://github.com/ixchelruiz/app</url>
   <inceptionYear>2021</inceptionYear>
   
   <properties>
@@ -51,6 +51,10 @@
       <developer>
           <id>aalmiray</id>
           <name>Andres Almiray</name>
+      </developer>
+      <developer>
+          <id>ixchelruiz</id>
+          <name>Ixchel Ruiz</name>
       </developer>
   </developers>
   
@@ -131,4 +135,13 @@
       </plugin>
     </plugins>
   </build>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
